--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,7 +27,11 @@
         </header>
 
         <div class="main-content">
-            {% block body %}{% endblock %}
+            <div class="row">
+                <div class="col-md-12">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
         </div>
 
         <div class="footer">
